# cna-py

./: .gitignore  README.md  pyproject.toml
src/cna/: __init__.py  cli.py  config.py
src/cna/io/: readers.py
src/cna/structure/: system.py
tests/: test_cli.py  test_config.py  test_io.py  test_structure.py
tests/data/: 01_simple_helix.cif
